--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "2.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "chai": "4.3.6",
     "ethers": "5.7.2",
