--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "chai": "4.3.6",
     "ethers": "5.7.2",
-    "hardhat": "2.19.4"
+    "hardhat": "2.19.4",
+    "prettier": "^3.3.3",
+    "prettier-plugin-solidity": "^1.3.1"
   }
 }
